# reversy

./: CMakeLists.txt  Reversy  Reversy.cpp  makefile
Debug/: BasicRules.d  ComputerPlayer.d  Game.d  Hw2  IPlayer.d  subdir.mk
workspace/Hw2/: .cproject
workspace/Hw2/Debug/: Board.d  ConsoleDisplayer.d  ConsolePlayer.d  Hw2  PlayerTypes.d  Reversy.d  makefile  subdir.mk
workspace/Hw2/Debug/Untitled Folder/: Board.d  ConsoleDisplayer.d  ConsolePlayer.d  Game.d  IPlayer.d  Point.d  Reversy.d  subdir.mk
workspace/Hw2/Debug/Untitled Folder/Debug/: subdir.mk
workspace/Hw2/Release/: Hw2  makefile  sources.mk
workspace/Hw2/Release/Untitled Folder/: BasicRules.d  ComputerPlayer.d  subdir.mk
workspace/UnitTests/: .cproject
workspace/UnitTests/Debug/: makefile  sources.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googlemock/src/: subdir.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googlemock/test/: subdir.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googletest/codegear/: subdir.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googletest/samples/: subdir.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googletest/src/: subdir.mk
workspace/UnitTests/Debug/googletest-release-1.8.0/googletest/test/: subdir.mk
workspace/UnitTests/Debug/gtest_src/gtest/: subdir.mk
workspace/UnitTests/Debug/src/: BasicRules.d  Board.d  ComputerPlayer.d  ConsoleDisplayer.d  ConsolePlayer.d  Game.d  IPlayer.d  Point.d  Reversy.d  subdir.mk
workspace/UnitTests/Debug/test/: gtest_main.d  subdir.mk
(+2 files in other folders)
